# wintest

./: .bazelrc  MODULE.bazel
wintest/: BUILD.bazel
