module(name = "wintest")

bazel_dep(name = "rules_rust", version = "0.46.0")

cc_configure = use_extension("@bazel_tools//cpp:cc_configure.bzl", "cc_configure_extension")
cc_configure.cc_autoconf()

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    versions = ["1.79.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)